fix: changed code-example style visibility

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html, 
+body {
+  scroll-behavior: smooth;
+}
+
 .main-info {
   min-height: 400px!important;
 }
@@ -40,7 +45,7 @@
 
 @media (max-width: 500px) {
   .section-name {
-    font-size: 10px;
+    font-size: 15px;
   }
 }
 
@@ -55,6 +60,11 @@
 
 .portfolio-preview {
   max-width: 100%!important;
+}
+
+code, pre, pre code {
+  white-space: pre-wrap;
+  word-break: break-all;
 }
 
 .self-presentation {
